--- a/main.html
+++ b/main.html
@@ -1,16 +1,95 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OTP Verification</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f2f2f2;
+        }
+
+        .container {
+            text-align: center;
+        }
+
+        #verification_heading {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        #verification_subtext {
+            font-size: 16px;
+            color: #666;
+            margin-bottom: 20px;
+        }
+
+        .code-container {
+            display: inline-block;
+        }
+
+        .code {
+            width: 40px;
+            height: 40px;
+            font-size: 24px;
+            text-align: center;
+            margin: 0 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+
+        input[type="number"]::-webkit-inner-spin-button,
+        input[type="number"]::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        input[type="number"] {
+            -moz-appearance: textfield;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="container">
+        <h1 id="verification_heading">Verify Your Account</h1>
+        <p id="verification_subtext">Please enter the OTP sent to your phone number.</p>
+        <div class="code-container">
+            <input type="number" class="code" maxlength="1" oninput="nextInput(this)" onkeydown="previousInput(event)">
+            <input type="number" class="code" maxlength="1" oninput="nextInput(this)" onkeydown="previousInput(event)">
+            <input type="number" class="code" maxlength="1" oninput="nextInput(this)" onkeydown="previousInput(event)">
+            <input type="number" class="code" maxlength="1" oninput="nextInput(this)" onkeydown="previousInput(event)">
+            <input type="number" class="code" maxlength="1" oninput="nextInput(this)" onkeydown="previousInput(event)">
+            <input type="number" class="code" maxlength="1" oninput="nextInput(this)" onkeydown="previousInput(event)">
+        </div>
+    </div>
 
+    <script>
+        function nextInput(currentInput) {
+            if (currentInput.value.length >= 1) {
+                var nextInput = currentInput.nextElementSibling;
+                if (nextInput) {
+                    nextInput.focus();
+                }
+            }
+        }
+
+        function previousInput(event) {
+            if (event.key === 'Backspace') {
+                var previousInput = event.target.previousElementSibling;
+                if (previousInput) {
+                    previousInput.focus();
+                }
+            }
+        }
+    </script>
 </body>
-
 </html>
