--- a/main.html
+++ b/main.html
@@ -7,94 +7,84 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+            background-color: #f0f0f0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f2f2f2;
+            margin: 0;
         }
 
         .container {
             text-align: center;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
 
         #verification_heading {
             font-size: 24px;
-            font-weight: bold;
             margin-bottom: 10px;
         }
 
         #verification_subtext {
             font-size: 16px;
-            color: #666;
+            color: #888;
             margin-bottom: 20px;
         }
 
         .code-container {
-            display: inline-block;
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
         }
 
         .code {
             width: 40px;
             height: 40px;
-            font-size: 24px;
+            font-size: 20px;
             text-align: center;
             margin: 0 5px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            box-sizing: border-box;
-            outline: none; /* Remove default focus outline */
-        }
-
-        .code:focus {
-            border-color: blue; /* Add custom focus style */
-        }
-
-        input[type="number"]::-webkit-inner-spin-button,
-        input[type="number"]::-webkit-outer-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-
-        input[type="number"] {
-            -moz-appearance: textfield;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1 id="verification_heading">OTP Verification</h1>
-        <p id="verification_subtext">Please enter the OTP sent to your phone number.</p>
+        <h2 id="verification_heading">OTP Verification</h2>
+        <p id="verification_subtext">Please enter the 6-digit code sent to your mobile number.</p>
         <div class="code-container">
-            <input type="number" class="code" maxlength="1" data-cy="otp-input" oninput="nextInput(this)" onkeydown="previousInput(event)">
-            <input type="number" class="code" maxlength="1" data-cy="otp-input" oninput="nextInput(this)" onkeydown="previousInput(event)">
-            <input type="number" class="code" maxlength="1" data-cy="otp-input" oninput="nextInput(this)" onkeydown="previousInput(event)">
-            <input type="number" class="code" maxlength="1" data-cy="otp-input" oninput="nextInput(this)" onkeydown="previousInput(event)">
-            <input type="number" class="code" maxlength="1" data-cy="otp-input" oninput="nextInput(this)" onkeydown="previousInput(event)">
-            <input type="number" class="code" maxlength="1" data-cy="otp-input" oninput="nextInput(this)" onkeydown="previousInput(event)">
+            <input type="text" class="code" maxlength="1" autofocus>
+            <input type="text" class="code" maxlength="1">
+            <input type="text" class="code" maxlength="1">
+            <input type="text" class="code" maxlength="1">
+            <input type="text" class="code" maxlength="1">
+            <input type="text" class="code" maxlength="1">
         </div>
     </div>
 
     <script>
-        function nextInput(currentInput) {
-            if (currentInput.value.length >= 1) {
-                var nextInput = currentInput.nextElementSibling;
-                if (nextInput) {
-                    nextInput.focus();
-                }
-            }
-        }
+        const inputs = document.querySelectorAll('.code');
 
-        function previousInput(event) {
-            if (event.key === 'Backspace') {
-                var previousInput = event.target.previousElementSibling;
-                if (previousInput) {
-                    previousInput.focus();
+        inputs.forEach((input, index) => {
+            input.addEventListener('input', (e) => {
+                if (input.value.length === 1) {
+                    if (index < inputs.length - 1) {
+                        inputs[index + 1].focus();
+                    }
                 }
-            }
-        }
+            });
+
+            input.addEventListener('keydown', (e) => {
+                if (e.keyCode === 8 && input.value.length === 0) {
+                    if (index > 0) {
+                        inputs[index - 1].focus();
+                    }
+                }
+            });
+        });
     </script>
 </body>
 </html>
